# paddle-ocr-offline

./: .gitignore  Dockerfile  README.md  pyproject.toml
output/: Datachallenge4_res.json  temp_arabic-test-Image_res.json  temp_englishHand_res.json  temp_french_res.json  temp_german_res.json  temp_hindu_res.json  temp_spainish_res.json
src/: app.py  generate_models.py  main.py
src/local_models/: te_mobile_v2.0_rec_infer.tar
src/local_models/hindi/: README.md  config.json
src/output/: Datachallenge4_res.json
